--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+
 	<body class="is-preload">
+		<a href="https://store.cinntarolls.com/" class="float">
+		<i class="fas fa-shopping-cart"></i>
+		</a>
 
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
 					<h1 style="color:white;"><a href="https://www.instagram.com/cinntarolls/">CINNTA ROLLS</a></h1>
-					<p style="color:white;"> CRAFTED WITH LOVE, BAKED BY AN ARTIST</p>
+					<p style="color:white;">Enjoy little things</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
@@ -53,19 +57,23 @@
 						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon solid major fa-camera-retro"></span>
+								<!--<span class="icon solid major fa-camera-retro"></span>-->
+								<span><img src="images/picture1.png" alt="" width="250" height="250" /></span>
 								<h3>Classic CINNTA BOX</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
+								<!--<span class="icon solid major fa-pencil-alt"></span>-->
+								<span><img src="images/picture1.png" alt="" width="250" height="250" /></span>
 								<h3>Signature CINNTA BOX</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-code"></span>
+								<!--<span class="icon solid major fa-code"></span>-->
+								<span><img src="images/picture1.png" alt="" width="250" height="250" /></span>
 								<h3>Fruitful CINNTA BOX</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-coffee"></span>
+								<!--<span class="icon solid major fa-coffee"></span>-->
+								<span><img src="images/picture1.png" alt="" width="250" height="250" /></span>
 								<h3>Luscious CINNTA BOX</h3>
 							</li>
 						</ul>
@@ -83,7 +91,7 @@
 							<h2>Operating Hours</h2>
 						</header>
 						<p>CINNTA ROLLS is currently operating on a pre-order basis only. Bookings must be fulfilled 3 days prior to appointed date and customers can choose their order preparation time up to 14 days in advance in our system.</p>
-						<p>We will be taking up-to 4 slots of orders on each operating days and will be carrying out regular in-stock promotions at our <a href="https://www.instagram.com/cinntarolls/">CINNTA ROLLS Instagram</a> page. Do follow and check us out!.</p>
+						<p>Currently, we will only be taking up-to 2 slots of orders on each operating days and will be carrying out regular in-stock promotions at our <a href="https://www.instagram.com/cinntarolls/">CINNTA ROLLS Instagram</a> page. Do follow and check us out!.</p>
 					
 						<table>
 							<thead>
@@ -96,23 +104,27 @@
 							<tbody>
 								<tr>
 									<td>Saturday</td>
-									<td>Morning : 10:00AM - 12:00PM <br/> Evening : 3:00PM - 6:00PM</td>
-									<td>4</td>
+									<!--<td>Morning : 10:00AM - 12:00PM <br/> Evening : 3:00PM - 6:00PM</td>-->
+									<td>Evening : 3:00PM - 6:00PM</td>
+									<td>2</td>
 								</tr>
 								<tr>
 									<td>Sunday</td>
-									<td>Morning : 10:00AM - 12:00PM <br/> Evening : 3:00PM - 6:00PM</td>
-									<td>4</td>
+									<!--<td>Morning : 10:00AM - 12:00PM <br/> Evening : 3:00PM - 6:00PM</td>-->
+									<td>Evening : 3:00PM - 6:00PM</td>
+									<td>2</td>
 								</tr>
 								<tr>
 									<td>Wednesday</td>
+									<!--<td>Evening : 3:00PM - 6:00PM</td>-->
 									<td>Evening : 3:00PM - 6:00PM</td>
-									<td>4</td>
+									<td>2</td>
 								</tr>
 								<tr>
 									<td>Thursday</td>
+									<!--<td>Evening : 3:00PM - 6:00PM</td>-->
 									<td>Evening : 3:00PM - 6:00PM</td>
-									<td>4</td>
+									<td>2</td>
 								</tr>
 							</tbody>
 							<!--
