--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.JPG" alt="" /></span>			
+					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>			
 					<div class="content">
 						<header class="major">
 							<h2>About Us</h2>
