--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<header class="major">
 							<h2>About Us</h2>
 						</header>
-						<p>At CINTA ROLLS, we break away from the norm of creating basically same rolls with different toppings. Instead,  every recipe has been tailor-made from the ground-up, and perfected meticulously to awaken your deepest senses. We hand-crafted some of the most delicious cinnamon rolls you will ever taste and take pride in knowing that our customers will have the best ingredients in their rolls to get through the day!</p>
+						<p>At CINNTA ROLLS, we break away from the norm of creating basically same rolls with different toppings. Instead,  every recipe has been tailor-made from the ground-up, and perfected meticulously to awaken your deepest senses. We hand-crafted some of the most delicious cinnamon rolls you will ever taste and take pride in knowing that our customers will have the best ingredients in their rolls to get through the day!</p>
 						<p>We are currently based in Shah Alam and would love to explore more places in the future!</p>			
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
