Corrected pre order time

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<header class="major">
 							<h2>Operating Hours</h2>
 						</header>
-						<p>CINNTA ROLLS is currently operating on a pre-order basis only. Bookings must be made at least 3 days prior to appointed date and customers can choose their order preparation time up to 14 days in advance in our system.</p>
+						<p>CINNTA ROLLS is currently operating on a pre-order basis only. Bookings must be made at least 3 days prior to appointed date and customers can choose their order preparation time up to a month in advance in our system.</p>
 						<p>Currently, we will only be taking up-to 2 slots of orders on each operating day and will be carrying out regular in-stock promotions at our <a href="https://www.instagram.com/cinntarolls/">CINNTA ROLLS Instagram</a> page. Do follow and check us out!.</p>
 					
 						<table>
