Updated booked days

--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
 								<li><span class="booked_day">4</span></li>
 								<li><span class="off_day">5</span></li>
 								<li><span class="off_day">6</span></li>
-								<li><span class="avail_day">7</span></li>
+								<li><span class="booked_day">7</span></li>
 								<li><span class="avail_day">8</span></li>
 								<li><span class="off_day">9</span></li>
-								<li><span class="avail_day">10</span></li>
+								<li><span class="booked_day">10</span></li>
 								<li><span class="avail_day">11</span></li>
 								<li><span class="off_day">12</span></li>
 								<li><span class="off_day">13</span></li>
