Removed slots calendar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 		<div class="navbar">
 			<a class="active" href="https://store.cinntarolls.com/"><i class="fa fa-fw fa-home"></i> Order Now!</a> 
-			<a onclick="on()"><i class="fa fa-fw fa-search"></i> Slots Availability</a>
+			<!-- <a onclick="on()"><i class="fa fa-fw fa-search"></i> Slots Availability</a> -->
 		  </div>
 
 		<!-- Floating Button
